--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,2 +1,9 @@
 exclude_patterns:
   - ".mvn/"
+plugins:
+  sonar-java:
+    enabled: true
+    config:
+      tests_patterns:
+        - src/test/**
+        - app/src/test/**
